[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/Objects/touchscreen_buttons.gd" type="Script" id=1]
[ext_resource path="res://assets/arrow.png" type="Texture" id=2]

[node name="touchscreen_buttons" type="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -200.0
margin_top = -150.0
script = ExtResource( 1 )

[node name="up_button" type="TouchScreenButton" parent="."]
position = Vector2( 68, 70 )
rotation = -1.5708
normal = ExtResource( 2 )

[node name="right_button" type="TouchScreenButton" parent="."]
position = Vector2( 128, 70 )
normal = ExtResource( 2 )

[node name="left_button" type="TouchScreenButton" parent="."]
position = Vector2( 68, 134 )
rotation = 3.14159
normal = ExtResource( 2 )
[connection signal="pressed" from="up_button" to="." method="_on_up_button_pressed"]
[connection signal="released" from="up_button" to="." method="_on_up_button_released"]
[connection signal="pressed" from="right_button" to="." method="_on_right_button_pressed"]
[connection signal="released" from="right_button" to="." method="_on_right_button_released"]
[connection signal="pressed" from="left_button" to="." method="_on_left_button_pressed"]
[connection signal="released" from="left_button" to="." method="_on_left_button_released"]
